--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
 		"clear": "rd/s/q/dist"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Ivan Buglac",
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/core": "^7.25.7",
 		"@babel/preset-env": "^7.25.7",
 		"babel-loader": "^9.2.1",
+		"copy-webpack-plugin": "^12.0.2",
 		"css-loader": "^7.1.2",
 		"html-loader": "^5.1.0",
 		"html-webpack-plugin": "^5.6.0",
